{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 785,
  "lineage": "df8d8f10-7443-b134-c78f-6991d8cfef38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:loadbalancer/app/ecs-20260811063519743000000014/84746022674e6415",
            "arn_suffix": "app/ecs-20260811063519743000000014/84746022674e6415",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-20260811063519743000000014-1286188794.ap-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:loadbalancer/app/ecs-20260811063519743000000014/84746022674e6415",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-20260811063519743000000014",
            "name_prefix": "ecs-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02641585bf881924f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01894101ef3fd71cc"
              },
              {
                "subnet_id": "subnet-084cc20f724b4e5ab"
              }
            ],
            "subnets": [
              "subnet-01894101ef3fd71cc",
              "subnet-084cc20f724b4e5ab"
            ],
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "vpc_id": "vpc-06de2a704d10247c0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0173938T07WNTVAEPZN"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "config",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:listener/app/ecs-20260811063519743000000014/84746022674e6415/c3a86a3009b1fabf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:targetgroup/tg-cfg2026081106350735730000000b/7c4e281bd4dce5b5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:listener/app/ecs-20260811063519743000000014/84746022674e6415/c3a86a3009b1fabf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:loadbalancer/app/ecs-20260811063519743000000014/84746022674e6415",
            "mutual_authentication": [],
            "port": 8888,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.config",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "discovery",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:listener/app/ecs-20260811063519743000000014/84746022674e6415/31d1deb45abf2dae",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:targetgroup/tg-dsc2026081106350735740000000c/a26ce11f9574fb91",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:listener/app/ecs-20260811063519743000000014/84746022674e6415/31d1deb45abf2dae",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:loadbalancer/app/ecs-20260811063519743000000014/84746022674e6415",
            "mutual_authentication": [],
            "port": 8761,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.discovery",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:listener/app/ecs-20260811063519743000000014/84746022674e6415/89b8b5a2df44004d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:targetgroup/tg-gw2026081106350735940000000d/032e1e2e7cce3841",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:listener/app/ecs-20260811063519743000000014/84746022674e6415/89b8b5a2df44004d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:loadbalancer/app/ecs-20260811063519743000000014/84746022674e6415",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.gateway",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "config",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:targetgroup/tg-cfg2026081106350735730000000b/7c4e281bd4dce5b5",
            "arn_suffix": "targetgroup/tg-cfg2026081106350735730000000b/7c4e281bd4dce5b5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,404",
                "path": "/config-server/dev",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:targetgroup/tg-cfg2026081106350735730000000b/7c4e281bd4dce5b5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-2:186703948765:loadbalancer/app/ecs-20260811063519743000000014/84746022674e6415"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-cfg2026081106350735730000000b",
            "name_prefix": "tg-cfg",
            "port": 8888,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "discovery",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:targetgroup/tg-dsc2026081106350735740000000c/a26ce11f9574fb91",
            "arn_suffix": "targetgroup/tg-dsc2026081106350735740000000c/a26ce11f9574fb91",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:targetgroup/tg-dsc2026081106350735740000000c/a26ce11f9574fb91",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-2:186703948765:loadbalancer/app/ecs-20260811063519743000000014/84746022674e6415"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-dsc2026081106350735740000000c",
            "name_prefix": "tg-dsc",
            "port": 8761,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:targetgroup/tg-gw2026081106350735940000000d/032e1e2e7cce3841",
            "arn_suffix": "targetgroup/tg-gw2026081106350735940000000d/032e1e2e7cce3841",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 45,
                "matcher": "200,404",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:186703948765:targetgroup/tg-gw2026081106350735940000000d/032e1e2e7cce3841",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-2:186703948765:loadbalancer/app/ecs-20260811063519743000000014/84746022674e6415"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-gw2026081106350735940000000d",
            "name_prefix": "tg-gw",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044d8ee2ea3328531",
            "arn": "arn:aws:ec2:ap-south-2:186703948765:elastic-ip/eipalloc-044d8ee2ea3328531",
            "association_id": "eipassoc-0a85ce9156bf535c4",
            "domain": "vpc",
            "id": "eipalloc-044d8ee2ea3328531",
            "network_border_group": "ap-south-2",
            "network_interface": "eni-09c9cd8ab218c9672",
            "private_dns": "ip-10-0-1-191.ap-south-2.compute.internal",
            "private_ip": "10.0.1.191",
            "public_dns": "ec2-16-113-3-151.ap-south-2.compute.amazonaws.com",
            "public_ip": "16.113.3.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecs-fargate-nat-eip"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-nat-eip",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:internet-gateway/igw-0480067a148343789",
            "id": "igw-0480067a148343789",
            "owner_id": "186703948765",
            "tags": {
              "Name": "ecs-fargate-igw"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-igw",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044d8ee2ea3328531",
            "association_id": "eipassoc-0a85ce9156bf535c4",
            "connectivity_type": "public",
            "id": "nat-0f90e936ac989849e",
            "network_interface_id": "eni-09c9cd8ab218c9672",
            "private_ip": "10.0.1.191",
            "public_ip": "16.113.3.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01894101ef3fd71cc",
            "tags": {
              "Name": "ecs-fargate-nat-gw"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-nat-gw",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:route-table/rtb-00451f7d4ecd06f7d",
            "id": "rtb-00451f7d4ecd06f7d",
            "owner_id": "186703948765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f90e936ac989849e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-fargate-private-rt"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-private-rt",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "timeouts": null,
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:route-table/rtb-05c4fffc6afc85c17",
            "id": "rtb-05c4fffc6afc85c17",
            "owner_id": "186703948765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0480067a148343789",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-fargate-public-rt"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-public-rt",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "timeouts": null,
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9ba8ba18415ad23",
            "route_table_id": "rtb-00451f7d4ecd06f7d",
            "subnet_id": "subnet-0df5662c34a2c60b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd2eee50cb05df78",
            "route_table_id": "rtb-00451f7d4ecd06f7d",
            "subnet_id": "subnet-034b3509bf11e641a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a8a2f262153c354",
            "route_table_id": "rtb-05c4fffc6afc85c17",
            "subnet_id": "subnet-01894101ef3fd71cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe11ea7ea53c1c33",
            "route_table_id": "rtb-05c4fffc6afc85c17",
            "subnet_id": "subnet-084cc20f724b4e5ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:security-group/sg-02641585bf881924f",
            "description": "Access to the load balancer from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02641585bf881924f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8761,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8761
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "ecs-fargate-alb-sg-2026081106350736000000000e",
            "name_prefix": "ecs-fargate-alb-sg-",
            "owner_id": "186703948765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-fargate-alb-sg"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-alb-sg",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "timeouts": null,
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:security-group/sg-00018794bd0fb730b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00018794bd0fb730b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d77db4fa06ab06f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ecs-fargate-db-sg-20260811063516429200000012",
            "name_prefix": "ecs-fargate-db-sg-",
            "owner_id": "186703948765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-fargate-db-sg"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-db-sg",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "timeouts": null,
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:security-group/sg-05d77db4fa06ab06f",
            "description": "Access to the ECS tasks from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d77db4fa06ab06f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02641585bf881924f"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ecs-fargate-tasks-sg-20260811063512174800000011",
            "name_prefix": "ecs-fargate-tasks-sg-",
            "owner_id": "186703948765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-fargate-tasks-sg"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-tasks-sg",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "timeouts": null,
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:subnet/subnet-0df5662c34a2c60b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df5662c34a2c60b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186703948765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fargate-private-1"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-private-1",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:subnet/subnet-034b3509bf11e641a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034b3509bf11e641a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186703948765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fargate-private-2"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-private-2",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:subnet/subnet-01894101ef3fd71cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01894101ef3fd71cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186703948765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fargate-public-1"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-public-1",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:subnet/subnet-084cc20f724b4e5ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084cc20f724b4e5ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186703948765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fargate-public-2"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-public-2",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            },
            "vpc_id": "vpc-06de2a704d10247c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:186703948765:vpc/vpc-06de2a704d10247c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ab0e36674ecea62d",
            "default_route_table_id": "rtb-0979838ed7e091358",
            "default_security_group_id": "sg-080685ad0c8bea4d8",
            "dhcp_options_id": "dopt-09abdeb224ea09d01",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06de2a704d10247c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0979838ed7e091358",
            "owner_id": "186703948765",
            "tags": {
              "Name": "ecs-fargate-vpc"
            },
            "tags_all": {
              "CostCenter": "10001",
              "Environment": "Dev",
              "Name": "ecs-fargate-vpc",
              "Owner": "Sravan",
              "Project": "It_Support_System"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}